<resources>
    <string name="app_name">Blood Pressure Diary</string>
    <string name="time_counting">time counting: %d</string>
    <string name="add">Add</string>
    <string name="date">date</string>
    <string name="sys">SYS</string>
    <string name="dia">DIA</string>
    <string name="pulse">pulse</string>
    <string name="delete_this_line">Delete this line?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_type_of_measurement">Choose type of measurement</string>
    <string name="single_measurement">Single measurement</string>
    <string name="serial_measurement">Serial Measurement</string>
    <string name="delete_all">Delete all of measurements?</string>
    <string name="save_measurement">Save measurement</string>
    <string name="diastolic">Diastolic:</string>
    <string name="pulseMeasurement">Pulse:</string>
    <string name="systolic">Systolic:</string>
    <string name="clear_all">clear_all</string>
    <string name="sit_be_calm_and_wait">Sit, be calm and wait</string>
    <string name="seconds">seconds</string>
    <string name="cancel_waiting">Cancel waiting!</string>
    <string name="number_of_measurements_left">Number of measurements left:</string>
    <string name="data_entry">Data entry</string>

</resources>
