<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="commaciejprogramuje.facebook.pressure.SerialActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number_of_measurements_left"
        style="@style/mediumText" />

    <TextView
        android:id="@+id/numOfMesurementsLeftTextView"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        style="@style/mediumText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/sit_be_calm_and_wait"
        style="@style/largeText" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        style="@style/largeText" />

    <Button
        android:id="@+id/cancelWaitingButton"
        android:onClick="cancelWaitingButtonOnClick"
        android:text="@string/cancel_waiting"
        style="@style/myButtonStyle"
        android:layout_weight="1"/>

</LinearLayout>
