<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="commaciejprogramuje.facebook.pressure.ChooseActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/choose_type_of_measurement"
            style="@style/largeText" />

        <Button
            android:id="@+id/singleBtn"
            android:layout_weight="1"
            android:onClick="singleMeasurementOnClick"
            android:text="@string/single_measurement"
            style="@style/myButtonStyle"/>

        <Button
            android:id="@+id/serialBtn"
            android:layout_weight="1"
            android:onClick="serialMeasurementOnClick"
            android:text="@string/serial_measurement"
            style="@style/myButtonStyle"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
