<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/sysTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/systolic"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/sysNp"
                style="@style/MyNP" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diastolic"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/diaNp"
                style="@style/MyNP" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/pulTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulseMeasurement"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/pulNp"
                style="@style/MyNP" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="@style/myButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="saveMeasurementsOnClick"
            android:text="@string/save_measurement" />

    </LinearLayout>

</LinearLayout>