<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="commaciejprogramuje.facebook.pressure.MainActivity"
    tools:showIn="@layout/activity_main"
    android:theme="@style/Base.Theme.AppCompat.Light"
    android:background="@color/cardview_light_background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:text="@string/date"
            style="@style/TopBar" />

        <TextView
            android:layout_weight="14"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:text="@string/sys"
            android:textAlignment="textEnd"
            style="@style/TopBar" />

        <TextView
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:text="@string/dia"
            android:textAlignment="textEnd"
            style="@style/TopBar" />

        <TextView
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:text="@string/pulse"
            android:textAlignment="textEnd"
            style="@style/TopBar" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@color/cardview_light_background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/measurement_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            android:background="@color/cardview_light_background"/>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
